changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Fix use of uninitialised variables in the plugin API and remove some dead code
from the plugin API (as in: never called from plugin_common.c) Also cleanup
indention in map.h, change order of members in some structs in face.h to pack
them a bit better.
 include/face.h
 include/map.h
 plugins/common/plugin_common.c
 server/plugins.c
Arvid Norlander 2008-05-29

Fix the member order in global.h to match the one in init.c. Fix some extern
with wrong type (was char* instead of const char* const). Change some prototypes
to use const pointers. Change to strtol if it exists, and only fall back to
strtol_local if it doesn't.
 common/object.c
 common/porting.c
 common/treasure.c
 include/attack.h
 include/global.h
 include/libproto.h
 include/sproto.h
 server/login.c
 server/spell_util.c
 server/time.c
Arvid Norlander 2008-05-29

Fix a case of assigning and passing a string literal (const char*) as a char*.
Also pack one structure a bit better.
 random_maps/random_map.c
 random_maps/random_map.h
 random_maps/rproto.h
 random_maps/special.c
Arvid Norlander 2008-05-29

Make server send size and data in one packet, this fix is suboptimal though as
it uses memcpy to do so, it should use writev instead.
 socket/lowlevel.c
Arvid Norlander 2008-05-29

Change the order of some members in some of the large and often used structs in
order to pack them better. This will mainly help on x86_64, but also a bit on x86.
No actual functionality change. Some structs could be packed even better but that
would destroy the logical sectioning of the members in groups.
 include/living.h
 include/map.h